Füge CSS-Stile für eingebettete Signer-Optionen hinzu und verbessere die Responsivität

--- a/tests/sendevent.html
+++ b/tests/sendevent.html
@@ -60,6 +60,10 @@
         }
         .ok { color: #7ee787; }
         .err { color: #ff7b72; }
+        #embed-signer {
+            width: auto;
+            margin-right: 8px;
+        }
     </style>
 </head>
 <body>
