--- a/tests/signer.html
+++ b/tests/signer.html
@@ -2,6 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Nostr Signer (No-Popup)</title>
     <style>
         body { font-family: sans-serif; padding: 20px; background: #121212; color: white; }
